@@ -7,6 +7,7 @@ vX.Y.Z
 - Fix segmentation fault when limiting the total number of driver threads
 - Increase buffer size for the database hostname in the client to 64 bytes
 - Add -y flag to run-workload script to specify database is a service
+- Fix driver's rampup calculation when limiting total emulated terminals
 
 v0.42
 
